feat(dev-lang): 完成第二批 25 篇文档金标准升级
JS 5 篇：生成器函数/Proxy与Reflect/网络请求API/Promise构造器/递归与尾调用优化
TS 5 篇：协变与逆变/类型声明与模块解析/模板字面量类型/递归类型与深度操作/声明文件编写
Java 5 篇：CompletableFuture异步编排/Java单元测试/枚举与注解/泛型进阶/ThreadLocal内存泄漏
C 5 篇：国际化与本地化/复杂声明解析/多文件编译/volatile关键字/二级指针与指针数组
Python 5 篇：Python与NLP/Python与打包发布/Python与加密/Python与自动化/Python与Web爬虫

每篇文档按 12 项质量基准升级：
- 学习目标(Bloom 分类)/历史动机/形式化定义/理论推导
- 代码示例/对比分析/常见陷阱/工程实践
- 案例研究/习题/参考文献(ACM Reference Format)/延伸阅读

预计新增约 58,829 行高质量教学内容，达到海外知名高校教学水准。